<resources>
    <string name="app_name">LessonTracker</string>

    <string name="subject_title_hint">Enter Subject Title</string>
    <string name="subject_detail_hint">Enter Subject Details</string>
    <string name="subject_add_button">Add Subject</string>
    <string name="subject_new_topic_button">Add New Topic</string>
    <string name="subject_toast_add_success">New Subject Has Been Added!</string>

    <string name="cohort_name_hint">Enter Cohort Name</string>
    <string name="cohort_add_button">Add Cohort</string>
    <string name="cohort_toast_add_success">New Cohort Has Been Added!</string>

    <string name="topic_title_hint">Enter Topic Title</string>
    <string name="topic_detail_hint">Enter Topic Details</string>
    <string name="topic_add_button">Add Topic</string>
    <string name="topic_new_learning_objective_button">Add New Objective</string>
    <string name="topic_toast_add_success">New Topic Has Been Added!</string>

    <string name="topic_stats_title">Topic Statistics</string>
    <string name="topic_stats_button_barchart_all">% Objectives Met\nAll Lessons</string>
    <string name="topic_stats_button_piechart">What Objectives\nAre Failing</string>
    <string name="topic_stats_button_linechart">Lesson Durations</string>

    <string name="learning_objective_title_hint">Enter Learning Objective Title</string>
    <string name="learning_objective_detail_hint">Enter Learning Objective Details</string>
    <string name="learning_objective_add_button">Add Objective</string>
    <string name="learning_objective_finish_button">Finish</string>
    <string name="learning_objective_toast_add_success">New Learning Objective Has Been Added!</string>

    <string name="menu_item_lessons">Lessons</string>

    <string name="list_new_subject_button">Add New\nSubject</string>
    <string name="list_new_lesson_button">Add New\nLesson</string>
    <string name="list_new_cohort_button">Add New\nCohort</string>

    <string name="lesson_cohort_hint">Enter Cohort ID</string>
    <string name="lesson_date_picker">Select Lesson Date</string>
    <string name="lesson_add_button">Add Lesson</string>
    <string name="lesson_teach_now">Teach Lesson Now?</string>
    <string name="lesson_toast_add_success">New Lesson Has Been Added!</string>


    <string name="tagging_title">Click Tag To Add Improvement Recommendation</string>
    <string name="tagging_complete_button">Done</string>
    <string name="tagging_toast_complete">Tags Added!</string>
    <string name="tagging_objective_question">Was Objective Met?</string>
    <string name="tagging_objective_met">Yes</string>
    <string name="tagging_objective_not_met">No</string>

    <string name="take_lesson_complete_button">Complete Lesson</string>
    <string name="take_lesson_toast_taught_success">Lesson has been taught, well done!</string>
    <string name="take_lesson_notes_hint">Add notes here...</string>

    <string name="outcome_tag_header">Recommended Improvements</string>

    <string name="lesson_history_filter_button">Filter</string>
    <string name="lesson_history_title">Completed Lessons</string>

    <string name="footer_take_lesson">Take\nLesson</string>
    <string name="footer_lesson_history">Lesson\nHistory</string>
    <string name="footer_view_subjects">View\nSubjects</string>
    <string name="footer_view_cohorts">View\nCohorts</string>

</resources>
