<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topic_subject_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <EditText
        android:id="@+id/topic_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/topic_title_hint"/>

    <EditText
        android:id="@+id/topic_detail_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/topic_detail_hint"/>

    <Button
        android:id="@+id/topic_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/topic_add_button"/>

</LinearLayout>